Fixes some spacing issues

--- a/src/components/nutriScore/nutriScore.css
+++ b/src/components/nutriScore/nutriScore.css
@@ -3,6 +3,7 @@
   display: block;
   max-width: 100px;
   margin: 0 auto;
+  padding: 0 15px;
 }
 
 .nutriscore__history {
