--- a/src/components/productDisplay/productDisplay.css
+++ b/src/components/productDisplay/productDisplay.css
@@ -82,5 +82,6 @@
 .productDisplay__scores {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
+  margin-top: 10px;
 }
